force-app/main/default/objects/Required_Job_Type_Item__c/Required_Job_Type_Item__c.object-meta.xml
<CustomObject>
    <description>Required Job Type Items/Documents</description>
    <label>Required Job Type Item</label>
    <nameField>
        <label>Required Job Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Required Job Type Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>