force-app/main/default/objects/Required_Job_Type_Item__c/fields/Engagement_Date_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Date_Field_API_Name__c</fullName>
    <description>Related date field api name on the engagement</description>
    <label>Engagement Date Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>