force-app/main/default/objects/Required_Job_Type_Item__c/fields/Engagement_Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status_Field_API_Name__c</fullName>
    <description>Engagement Field API Status Name</description>
    <label>Engagement Status Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>